# miles-agent

./: .gitignore  start.sh
backend/: .env.example  .gitignore  REDESIGN.md  pyproject.toml  server.py
backend/agent/: audit.py  config.py  core.py  facts.py  heso_receipts.py  llm.py  migrate.py  persona.py  policy.py  runtime.py  safety.py  scribe.py  store.py  style.py
backend/agent/tools/: __init__.py  browser.py  calendar_tools.py  code_exec.py  contacts.py  dispatch.py  files.py  gmail.py  heartbeats.py  memory.py  secrets_store.py  skills.py  subagent.py  system.py  tasks.py  verification.py  vision.py  voice_call.py  web.py  web_cli.py
backend/agent/voice/: __init__.py  bridge.py  gemini_live.py  persona.py  transcode.py  voice_tools.py
deploy/: .env.template  Caddyfile  Dockerfile  backup.sh  docker-compose.yml  provision.sh  update.sh  vm-setup.sh
frontend/: next.config.ts  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: activity-feed.tsx  chat-panel.tsx  heartbeats-panel.tsx  skills-panel.tsx  tasks-panel.tsx
frontend/src/hooks/: use-websocket.ts
frontend/src/lib/: utils.ts
