[project]
name = "heso-ceo"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "openai>=1.50.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "ddgs>=6.0.0",
    "structlog>=24.0.0",
    "mss>=9.0.0",
    "pillow>=10.0.0",
    "scrapling>=0.2.9",
    "playwright>=1.40.0",
    "keyring>=25.0.0",
    "keyrings.cryptfile>=1.3.9",
    "graphiti-core[falkordb]>=0.5.0",
    "google-api-python-client>=2.100.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.1.0",
    "browser-use>=0.13.1",
    "google-genai>=1.65.0",
    "twilio>=9.10.9",
    "markdown-it-py>=3.0.0",
    "markdownify>=0.13.0",
    "litellm>=1.83.0",
    "numpy>=2.0.0",
    "heso>=0.4.3",
]

[tool.uv]
package = false

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
